# Dreflowpro

./: .gitguardian.yml  .gitignore  CLAUDE.md  CONNECTOR_PREVIEW_FIX.md  LANDING_PAGE_REDESIGN_PLAN.md  SECURITY.md  SECURITY_PHASE2_IMPLEMENTATION.md  SECURITY_PHASE3_COMPLETED.md  SECURITY_PHASE3_PLAN.md  ai_insight.md  test_connector_fix.py  test_reports_api.py
backend/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  MARKETING_STRATEGY.md  TECHNICAL_IMPLEMENTATION.md  alembic.ini  create_seed_data.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run_tests.py  start_workers.sh  stop_workers.sh  test_db.py  test_telemetry_features.py  update_schema.py
backend/alembic/versions/: 005_add_phase_2_models.py  006_add_reports_functionality.py
backend/app/api/: security.py
backend/app/core/: api_key_manager.py  audit_logger.py  audit_logging.py  cache_manager.py  config.py  database.py  database_indexes.py  exceptions.py  field_encryption.py  input_validation.py  mfa.py  openapi_config.py  prometheus_middleware.py  rate_limiter.py  security.py  security_dashboard.py  session_security.py  tenant_deps.py  tenant_middleware.py  token_rotation.py  validation.py  validation_config.py  validators.py  websocket.py
backend/app/middleware/: __init__.py  audit_middleware.py  rate_limiter.py  rate_limiting.py  security_headers.py
backend/app/ml/: __init__.py  models.py  preprocessor.py  training_service.py
backend/app/models/: __init__.py  ai_insights.py  all.py  api_key.py  audit_log.py  connector.py  pipeline.py  pipeline_version.py  report.py  telemetry.py  tenant.py  token_family.py  user.py
backend/app/schemas/: ai_insights.py  auth.py  connector.py  dashboard.py  pipeline.py  tenant.py
backend/app/services/: analytics_service.py  connector_service.py  data_quality_service.py  file_handler.py  performance_service.py  pipeline_service.py  pipeline_version_service.py  reports_service.py  telemetry_service.py  template_builder_service.py  tenant_service.py
backend/app/templates/: export_templates.py
backend/database/: init.sql
backend/monitoring/: prometheus.yml
backend/nginx/: nginx.conf
backend/redis/: redis.conf
backend/tests/: conftest.py  test_cache_manager.py  test_connector_crud.py  test_connectors.py  test_health_check.py  test_pipeline_version.py  test_security_phase3.py  test_validation.py
fastapi_d_reflowpro/: .env.example  DATABASE_OPTIMIZATION.md  DEPLOYMENT.md  PRD.md  REPORTING_AND_ANALYTICS.md  celery_worker.py  demo_main.py  main.py  optimize_database.py  pyproject.toml  setup_postgres.py
fastapi_d_reflowpro/alembic/: env.py
fastapi_d_reflowpro/app/: __init__.py
fastapi_d_reflowpro/monitoring/: docker-compose.monitoring.yml
fastapi_d_reflowpro/phase2_models/: connector.py  pipeline.py
fastapi_d_reflowpro/tests/: conftest.py  test_auth.py  test_connector_crud.py  test_connectors.py  test_pipelines.py  test_real_elt_connectors.py  test_services.py  test_transformations.py  test_validation.py
(+350 files in other folders)
