[project]
name = "d-reflowpro"
version = "0.1.0"
description = "ETL SaaS Platform for Non-Technical Users"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web Framework
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.12",
    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "alembic>=1.13.0",
    "greenlet>=3.0.0",
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "authlib>=1.3.0",
    # Background Tasks & Caching
    "celery>=5.3.0",
    "redis>=5.0.0",
    "aioredis>=2.0.0",
    "fastapi-cache2>=0.2.0",
    # Data Processing
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scipy>=1.16.0",
    "scikit-learn>=1.7.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.2.0",
    # Report Generation
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "reportlab>=4.0.0",
    "python-pptx>=1.0.0",
    # File Handling
    "python-magic>=0.4.27",
    "aiofiles>=24.1.0",
    # Validation & Serialization
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # HTTP Client
    "httpx>=0.28.0",
    "requests>=2.32.0",
    "psycopg2-binary>=2.9.0",
    # Utilities
    "python-slugify>=8.0.0",
    "email-validator>=2.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "psutil>=7.0.0",
    "prometheus-client>=0.22.1",
    "joblib>=1.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]
